--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <title>Janez Grošelj</title>
     </head>
     <body>
-            <body style="background-color:orangered;">
+            <body style="">
             <style>
                     .container {
                         border: 3px solid green;
