--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     
-            <body style="">
+            <body style="background-color:darkslategray">
             <style>
                     body {
                       font-size: 100%;
@@ -21,7 +21,7 @@
                       position: relative;
                       }
                     
-                    .container2 
+                    .container2 {
                         border:;
                         height:200px;
                         position: relative;
