--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
                     .ime {
                         font-family: "Old Standard TT", serif;
-                        font-size: 2.5em;
+                        font-size: 250%;
                         color: white;
                     }
                     .text {
                         font-family: "Old Standard TT", serif;
-                        font-size: 1.5em;
+                        font-size: 150%;
                         color: black;
                     }
                     </style>
