--- a/index.html
+++ b/index.html
@@ -47,14 +47,22 @@
 
                     .ime {
                         font-family: "Old Standard TT", serif;
-                        font-size: 250%;
+                        font-size: 2.5em;
                         color: white;
                     }
                     .text {
                         font-family: "Old Standard TT", serif;
-                        font-size: 150%;
+                        font-size: 1.5em;
                         color: black;
                     }
+
+                    @media only screen and (max-width: 768px) {
+                      div.ime {
+                        font-size: 4em;
+                      }
+                    }
+
+
                     </style>
                     
                     <div class="container">
