--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     .ime {
                         font-family: "Old Standard TT", serif;
-                        font-size: 2.5em;
+                        font-size: 4em;
                         color: white;
                     }
                     .text {
@@ -58,9 +58,15 @@
 
                     @media only screen and (max-width: 1082px) {
                       div.ime {
-                        font-size: 4em;
+                        font-size: 6em;
                       }
                     }
+                    @media only screen and (max-width: 1082px) {
+                      div.text {
+                        font-size: 2em;
+                      }
+                    }
+                    
 
 
                     </style>
