--- a/index.html
+++ b/index.html
@@ -111,7 +111,14 @@
                         font-size: 1.5em;
                         color: white;
                         align-items: center;
-                      
+                    }
+                    .kontakt2 {
+                        display: flex;
+                        align-self: flex-start;
+                        font-family: "Old Standard TT", sans-serif;
+                        font-size: 1.4em;
+                        color: white;
+                        align-items: center;
                     }
 
                     @media only screen and (max-width: 1082px) {
@@ -127,8 +134,12 @@
                         font-size: 2.65em;
                         align-self: flex-start;
                       }
+                      div.kontakt2 {
+                        font-size: 2.45em;
+                        align-self: flex-start;
+                      }
                       div.container3 {
-                        height:70px;
+                        height:80px;
                       }
                     }
                     @media only screen and (max-width: 1082px) {
@@ -172,7 +183,7 @@
                           </div>                   
                   </div>
                   <div class="container3">
-                      <div class="kontakt">
+                      <div class="kontakt2">
                       <p><br>OO386 4O 943 44O </p>
                       </div>           
                       
