--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-            <body style="background-color:rgb(227, 114, 34)">
+            <body style="background-color:white">
             <style>
 
                     body {
@@ -91,7 +91,7 @@
                     .ime {
                         font-family: "Old Standard TT", serif;
                         font-size: 4em;
-                        color: white;
+                        color:black;
                     }
                     .text {
                         display: flex;
@@ -109,7 +109,7 @@
                         align-self: flex-start;
                         font-family: "Old Standard TT", sans-serif;
                         font-size: 1.5em;
-                        color: white;
+                        color:black;
                         align-items: center;
                     }
                     .kontakt2 {
@@ -117,7 +117,7 @@
                         align-self: flex-start;
                         font-family: "Old Standard TT", sans-serif;
                         font-size: 1.4em;
-                        color: white;
+                        color:black;
                         align-items: center;
                     }
 
