--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
 	<head>
+
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
