--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/main.css" />
     <script src="javascript.js"></script>
 </head>
 
