--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Space invader</p>
                 </div>
                 <div class="opis-dela">
-                    <p>An architecture and statue enhancing light intervention</p>
+                    <p>A sculpture enhancing light intervention</p>
                 </div>
                 <div><img src="images/vesoljskizarek.jpg">
                 </div>
