--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="parent">
             <div class="header">
                 <h1>Janez Grošelj</h1>
-                <p>light architecture</p>
+                <p>studio</p>
             </div>
 
             <div>
