--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
         <div class="parent">
             <div class="header">
                 <h1>Janez Grošelj</h1>
-                <p>studio</p>
-            </div>
-
-            <div>
+                <p>Studio for light, architecture and design.</p>
                 <div class="navigation">
-                    <p># Current</p>
-                    <p># Light</p>
-                    <p># Architecture</p>
-                    <p># Design</p>
+                    
+                        <a href="url"># Current</a>
+                        <a href="url"># Light</a>
+                        <a href="url"># Architecture</a>
+                        <a href="url"># Design</a>
+                  
                 </div>
             </div>
+
+
             <div class="container-dela">
                 <div class="naslov-dela">
                     <p>Space invader</p>
