--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Studio for light, architecture and design.</p>
                 <div class="navigation">
                     
-                        <a href="url"># Current</a>
+                        <a href="url"># News</a>
                         <a href="url"># Light</a>
                         <a href="url"># Architecture</a>
                         <a href="url"># Design</a>
