--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="parent">
             <div class="header">
                 <h1>Janez Grošelj</h1>
-                <p>Studio for light, architecture and design.</p>
+                <p style="podnaslov">Studio for light, architecture and design.</p>
                 <div class="navigation">
                     
                         <a href="url"># News</a>
@@ -34,7 +34,7 @@
                     <p>Space invader</p>
                 </div>
                 <div class="opis-dela">
-                    <p>A sculpture enhancing light intervention</p>
+                    <p>A sculpture-enhancing light intervention</p>
                 </div>
                 <div><img src="images/vesoljskizarek.jpg">
                 </div>
