--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300, 700">
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="javascript.js"></script>
@@ -17,7 +17,7 @@
         <div class="parent">
             <div class="header">
                 <h1>Janez Grošelj</h1>
-                <p style="podnaslov">Studio for light, architecture and design.</p>
+                <p style class="podnaslov">Studio for light, architecture and design.</p>
                 <div class="navigation">
                     
                         <a href="url"># News</a>
@@ -31,7 +31,7 @@
 
             <div class="container-dela">
                 <div class="naslov-dela">
-                    <p>Space invader</p>
+                    <p style="naslov-dela">Space invader</p>
                 </div>
                 <div class="opis-dela">
                     <p>A sculpture-enhancing light intervention</p>
