--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
             <div class="header">
                 <h1>Janez Grošelj</h1>
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
-                <div class="navigation">
-                    
-                        <a href="url"><u># News&nbsp</u></a>
-                        <a href="url"># Light</a>
-                        <a href="url"># Architecture</a>
-                        <a href="url"># Design</a>
-                  
-                </div>
+
+            </div>
+            <div class="navigation">
+
+                <a href="url"><u># Latest&nbsp</u></a>
+                <a href="url"># Light&nbsp</a>
+                <a href="url"># Architecture&nbsp</a>
+                <a href="url"># Design&nbsp</a>
+                <a href="url"># Contact&nbsp</a>
+
             </div>
 
 
