--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300, 700">
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="javascript.js"></script>
 </head>
 
@@ -21,24 +21,16 @@
             </div>
             <div class="navigation">
 
-                <a href="url"><u># Latest&nbsp</u></a>
+                <a href="../index.html"># Latest&nbsp</a>
                 <a href="url"># Light&nbsp</a>
                 <a href="url"># Architecture&nbsp</a>
                 <a href="url"># Design&nbsp</a>
-                <a href="/contact.html"># Contact&nbsp</a>
+                <a href="url"><u># Contact&nbsp</u></a>
 
             </div>
-
-
-            <div class="container-dela">
-                <div class="naslov-dela">
-                    <p style="naslov-dela">Space invader</p>
-                </div>
-                <div class="opis-dela">
-                    <p>A sculpture-enhancing light intervention</p>
-                </div>
-                <div><img src="images/vesoljskizarek.jpg">
-                </div>
+            <div class="container-contact">
+                <p class="contact">studio@janezgroselj.com</p>
+                <p class="contact">00386 40 943 440</p>
             </div>
         </div>
     </div>
