--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="url"># Light&nbsp</a>
                 <a href="url"># Architecture&nbsp</a>
                 <a href="url"># Design&nbsp</a>
-                <a href="/contact.html"># Contact&nbsp</a>
+                <a href="/contact/index.html"># Contact&nbsp</a>
 
             </div>
 
