--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300, 700">
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="javascript.js"></script>
+
+    <meta name="description" content="Studio for light, architecture and design Janez Grošelj.">
+    <meta name="keywords" content="arhitektura, grafika, oblikovanje, svetloba, prenova, tloris, načrtovanje, inštalacija, splet, tisk, light, architecture, design, installation, art">
+    <meta name="author" content="Janez Grošelj">
+    <meta property="og:title" content="Studio Janez Grošelj | Janez Grošelj" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://janezgroselj.com" />
+    <meta property="og:description" content="Studio za svetlobo, arhitekturo in oblikovanje." />
 </head>
 
 <body>
@@ -37,7 +45,7 @@
                 <div class="opis-dela">
                     <p>A sculpture-enhancing light intervention</p>
                 </div>
-                <div><img src="images/vesoljskizarek.jpg">
+                <div><img src="images/vesoljskizarek.gif">
                 </div>
             </div>
         </div>
