--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="javascript.js"></script>
 
     <meta name="description" content="Studio for light, architecture and design Janez Grošelj.">
-    <meta name="keywords" content="arhitektura, grafika, oblikovanje, svetloba, prenova, tloris, načrtovanje, inštalacija, splet, tisk, light, architecture, design, installation, art">
+    <meta name="keywords"
+        content="arhitektura, grafika, oblikovanje, svetloba, prenova, tloris, načrtovanje, inštalacija, splet, tisk, light, architecture, design, installation, art">
     <meta name="author" content="Janez Grošelj">
     <meta property="og:title" content="Studio Janez Grošelj | Janez Grošelj" />
     <meta property="og:type" content="website" />
@@ -37,8 +38,7 @@
 
             </div>
 
-
-            <div class="container-dela">
+            <div class="container-dela-prvi">
                 <div class="naslov-dela">
                     <p style="naslov-dela">Space invader</p>
                 </div>
@@ -46,6 +46,16 @@
                     <p>A sculpture-enhancing light intervention</p>
                 </div>
                 <div><img src="images/vesoljskizarek.gif">
+                </div>
+            </div>
+            <div class="container-dela-naslednji">
+                <div class="naslov-dela">
+                    <p style="naslov-dela">Tree Heartbeat</p>
+                </div>
+                <div class="opis-dela">
+                    <p>The connection between human and tree manifested in light.</p>
+                </div>
+                <div><img src="images/tree-heartbeat.jpg">
                 </div>
             </div>
         </div>
