--- a/index.html
+++ b/index.html
@@ -37,25 +37,26 @@
                 <a href="/contact/index.html"># Contact&nbsp</a>
 
             </div>
-
-            <div class="container-dela-prvi">
-                <div class="naslov-dela">
-                    <p style="naslov-dela">Space invader</p>
+            <div class="container-del"></div>
+                <div class="container-dela-prvi">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela">Space invader</p>
+                    </div>
+                    <div class="opis-dela">
+                        <p>A sculpture-enhancing light intervention</p>
+                    </div>
+                    <div><img src="images/vesoljskizarek.gif">
+                    </div>
                 </div>
-                <div class="opis-dela">
-                    <p>A sculpture-enhancing light intervention</p>
-                </div>
-                <div><img src="images/vesoljskizarek.gif">
-                </div>
-            </div>
-            <div class="container-dela-naslednji">
-                <div class="naslov-dela">
-                    <p style="naslov-dela">Tree Heartbeat</p>
-                </div>
-                <div class="opis-dela">
-                    <p>The connection between human and tree manifested in light.</p>
-                </div>
-                <div><img src="images/tree-heartbeat.jpg">
+                <div class="container-dela-naslednji">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela">Tree Heartbeat</p>
+                    </div>
+                    <div class="opis-dela">
+                        <p>The connection between human and tree manifested in light.</p>
+                    </div>
+                    <div><img class="landscape" src="images/tree-heartbeat.jpg">
+                    </div>
                 </div>
             </div>
         </div>
