--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="url"># Light&nbsp</a>
                 <a href="url"># Architecture&nbsp</a>
                 <a href="url"># Design&nbsp</a>
-                <a href="/contact/index.html"># Contact&nbsp</a>
+                <a href="/contact/contact.html"># Contact&nbsp</a>
 
             </div>
             <div class="container-del"></div>
