--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div class="layout">
         <div class="parent">
             <div class="header">
-                <h1>Janez Grošelj</h1>
+                <a href="janezgroselj.com">
+                    <h1>Janez Grošelj</h1>
+                </a>
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
 
             </div>
@@ -38,28 +40,28 @@
 
             </div>
             <div class="container-del"></div>
-                <div class="container-dela-prvi">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
-                    </div>
-                    <div><img src="images/vesoljskizarek.gif">
-                    </div>
+            <div class="container-dela-prvi">
+                <div class="naslov-dela">
+                    <p style="naslov-dela">Space invader</p>
                 </div>
-                <div class="container-dela-naslednji">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
-                    </div>
-                    <div><img class="landscape" src="images/tree-heartbeat.jpg">
-                    </div>
+                <div class="opis-dela">
+                    <p>A sculpture-enhancing light intervention</p>
+                </div>
+                <div><img src="images/vesoljskizarek.gif">
+                </div>
+            </div>
+            <div class="container-dela-naslednji">
+                <div class="naslov-dela">
+                    <p style="naslov-dela">Tree Heartbeat</p>
+                </div>
+                <div class="opis-dela">
+                    <p>The connection between human and tree manifested in light.</p>
+                </div>
+                <div><img class="landscape" src="images/tree-heartbeat.jpg">
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
