--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="navigation">
 
-                <a href="../index.html"># Latest&nbsp</a>
+                <a href="../"># Latest&nbsp</a>
                 <a href="url"># Light&nbsp</a>
                 <a href="url"># Architecture&nbsp</a>
                 <a href="url"># Design&nbsp</a>
