--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="layout">
         <div class="parent">
             <div class="header">
-                <a href="janezgroselj.com">
+                <a href="/">
                     <h1>Janez Grošelj</h1>
                 </a>
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
