--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,9 @@
     <div class="layout">
         <div class="parent">
             <div class="header">
-                <h1>Janez Grošelj</h1>
+                <a href="/">
+                    <h1>Janez Grošelj</h1>
+                </a>
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
 
             </div>
