--- a/contact/index.html
+++ b/contact/index.html
@@ -15,9 +15,9 @@
     <div class="layout">
         <div class="parent">
             <div class="header">
-                <a href="/">
-                    <h1>Janez Grošelj</h1>
-                </a>
+                
+                    <h1><a href="/">Janez Grošelj</a></h1>
+                
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
 
             </div>
