--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
         <div class="parent">
             <div class="header">
                 
-                    <h1><a href="/">Janez Grošelj</a></h1>
+                    <h1>Janez Grošelj</h1>
                 
                 <p style class="podnaslov">Studio for light, architecture and design.</p>
 
