--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <h1>Janez Grošelj</h1>
 
-                <p style class="podnaslov">Studio for light, architecture and design.</p>
+                <p style class="podnaslov">&nbsp</p>
 
             </div>
             <div class="navigation">
