--- a/contact/index.html
+++ b/contact/index.html
@@ -17,9 +17,9 @@
             <div class="header">
                 
                     <h1>Janez Grošelj</h1>
-<!--                
-               <p style class="podnaslov">Studio for light, architecture and design.</p>
--->
+                
+               <p style class="podnaslov">&nbsp</p>
+
             </div>
             <div class="navigation">
 
