--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300, 700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700">
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="javascript.js"></script>
-
     <meta name="description" content="Studio for light, architecture and design Janez Grošelj.">
     <meta name="keywords"
         content="arhitektura, grafika, oblikovanje, svetloba, prenova, tloris, načrtovanje, inštalacija, splet, tisk, light, architecture, design, installation, art">
@@ -22,13 +22,12 @@
 
 <body>
     <div class="layout">
+        <div class="headbar">
+            <h1>Janez Grošelj</h1>
+        </div>
         <div class="parent">
             <div class="header">
-
-                <h1>Janez Grošelj</h1>
-
-                <p style class="podnaslov">&nbsp</p>
-
+                <h1>&nbsp</h1>
             </div>
             <div class="navigation">
 
