--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Studio za svetlobo, arhitekturo in oblikovanje." />
 </head>
 
-<body>
+<body style="background-color: #f4f4f4">
     <div class="layout">
         <div class="headbar">
             <h1>Janez Grošelj</h1>
