--- a/contact/index.html
+++ b/contact/index.html
@@ -11,16 +11,14 @@
     <script src="javascript.js"></script>
 </head>
 
-<body>
+<body style="background-color: #f5f5f5">
     <div class="layout">
-        <div class="parent">
-            <div class="header">
-                
+            <div class="headbar">
                     <h1>Janez Grošelj</h1>
-                
-               <p style class="podnaslov">&nbsp</p>
+                </div>
+        <div class="parent">
 
-            </div>
+
             <div class="navigation">
 
                 <a href="../"># Latest&nbsp</a>
