--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
         <div class="parent">
 
             <div class="navigation">
-
                 <a href="url"><u># Latest&nbsp</u></a>
                 <a href="url"># Light&nbsp</a>
                 <a href="url"># Architecture&nbsp</a>
                 <a href="url"># Design&nbsp</a>
                 <a href="/contact"># Contact&nbsp</a>
-
             </div>
-
 
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
@@ -74,7 +71,7 @@
                         <p>A sculpture-enhancing light intervention</p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/vesoljskizarek.jpg">
+                        <img class="landscape" src="images/tree-heartbeat.jpg">
 
                     </div>
                 </div>
