--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="url"><u># Latest&nbsp</u></a>
-                <a href="url"># Light&nbsp</a>
-                <a href="url"># Architecture&nbsp</a>
-                <a href="url"># Design&nbsp</a>
-                <a href="/contact"># Contact&nbsp</a>
+                <a href="url"><u>&nbspLatest&nbsp</u></a>
+                <a href="url"> Light&nbsp</a>
+                <a href="url"> Architecture&nbsp</a>
+                <a href="url"> Design&nbsp</a>
+                <a href="/contact"> Contact&nbsp</a>
             </div>
 
             <div class="container-del-prvi">
