--- a/contact/index.html
+++ b/contact/index.html
@@ -21,11 +21,11 @@
 
             <div class="navigation">
 
-                <a href="../"># Latest&nbsp</a>
-                <a href="url"># Light&nbsp</a>
-                <a href="url"># Architecture&nbsp</a>
-                <a href="url"># Design&nbsp</a>
-                <a href="url"><u># Contact&nbsp</u></a>
+                <a href="../">&nbspLatest&nbsp</a>
+                <a href="url"> Light&nbsp</a>
+                <a href="url"> Architecture&nbsp</a>
+                <a href="url"> Design&nbsp</a>
+                <a href="url"><u>&nbspContact&nbsp</u></a>
 
             </div>
             <div class="container-contact">
