--- a/contact/index.html
+++ b/contact/index.html
@@ -21,11 +21,11 @@
 
             <div class="navigation">
 
-                <a href="../">&nbspLatest&nbsp</a>
-                <a href="url"> Light&nbsp</a>
-                <a href="url"> Architecture&nbsp</a>
-                <a href="url"> Design&nbsp</a>
-                <a href="url"><u>&nbspContact&nbsp</u></a>
+                <a href="../">&nbsp Latest&nbsp</a>
+                <a href="url">&nbsp Light&nbsp</a>
+                <a href="url">&nbsp Architecture&nbsp</a>
+                <a href="url">&nbsp Design&nbsp</a>
+                <a href="url"><u>&nbsp Contact&nbsp</u></a>
 
             </div>
             <div class="container-contact">
