--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href="url"><u>&nbspLatest&nbsp</u></a>
-                <a href="url">&nbsp Light&nbsp</a>
-                <a href="url">&nbsp Architecture&nbsp</a>
-                <a href="url">&nbsp Design&nbsp</a>
-                <a href="/contact">&nbsp Contact&nbsp</a>
+                <a href="url"><u>&nbspLatest&nbsp</u>&nbsp</a>
+                <a href="url">&nbspLight&nbsp</a>
+                <a href="url">&nbspArchitecture&nbsp</a>
+                <a href="url">&nbspDesign&nbsp</a>
+                <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
             <div class="container-del-prvi">
