--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300, 700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:500,700">
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="javascript.js"></script>
 </head>
