--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
             <div class="navigation">
                 <a href=""><u>&nbspLatest&nbsp</u>&nbsp</a>
-                <a href="url">&nbspLight&nbsp</a>
-                <a href="url">&nbspArchitecture&nbsp</a>
-                <a href="url">&nbspDesign&nbsp</a>
+                <a hre="url">&nbspLight&nbsp</a>
+                <a hre="url">&nbspArchitecture&nbsp</a>
+                <a hre="url">&nbspDesign&nbsp</a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
