--- a/contact/index.html
+++ b/contact/index.html
@@ -23,10 +23,10 @@
             <div class="navigation">
 
                 <a href="../">&nbspLatest&nbsp</a>
-                <a href="url">&nbspLight&nbsp</a>
+<!--                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
-                <a href=""><u>&nbspContact&nbsp</u>&nbsp</a>
+ -->               <a href=""><u>&nbspContact&nbsp</u>&nbsp</a>
 
             </div>
             <div class="container-contact">
