--- a/contact/index.html
+++ b/contact/index.html
@@ -22,11 +22,11 @@
 
             <div class="navigation">
 
-                <a href="../">&nbspLatest&nbsp</a>
+                <a href="../">Latest</a>
 <!--                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
- -->               <a href=""><u>&nbspContact&nbsp</u>&nbsp</a>
+ -->               <a href=""><u>Contact</u>&nbsp</a>
 
             </div>
             <div class="container-contact">
