--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>Latest</u>&nbsp</a>
+                <a href=""><u>Work</u>&nbsp</a>
  <!--               <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
