--- a/contact/index.html
+++ b/contact/index.html
@@ -22,7 +22,7 @@
 
             <div class="navigation">
 
-                <a href="../">Latest</a>
+                <a href="../">Projects</a>
 <!--                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
