--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>Projects</u>&nbsp</a>
- <!--               <a href="url">&nbspLight&nbsp</a>
+                <a href=""><u>Latest</u>&nbsp</a>
+                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
- -->               <a href="/contact">Contact</a>
+                <a href="/contact">Contact</a>
             </div>
 
             <div class="container-del-prvi">
