--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
-                <a href="/contact">Contact</a>
+                <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
             <div class="container-del-prvi">
