--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@
             <div class="navigation">
 
                 <a href=""><u>Contact</u>&nbsp</a>
-                <a href="../">&nbspHome</a>
+                <a href="../">&nbspBack</a>
 <!--                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
