--- a/contact/index.html
+++ b/contact/index.html
@@ -14,9 +14,13 @@
 
 <body style="background-color: #f5f5f5">
     <div class="layout">
-            <div class="headbar">
-                    <h1>Janez Grošelj</h1>
-                </div>
+        <div class="headbar">
+            <h1>
+                <a href="../index.html">
+                    Janez Grošelj
+                </a>
+            </h1>
+        </div>
         <div class="parent">
 
 
@@ -24,10 +28,10 @@
 
                 <a href=""><u>Contact</u>&nbsp</a>
                 <a href="../">&nbspBack</a>
-<!--                <a href="url">&nbspLight&nbsp</a>
+                <!--                <a href="url">&nbspLight&nbsp</a>
                 <a href="url">&nbspArchitecture&nbsp</a>
                 <a href="url">&nbspDesign&nbsp</a>
- -->               
+ -->
 
             </div>
             <div class="container-contact">
