--- a/design/index.html
+++ b/design/index.html
@@ -23,7 +23,11 @@
 <body style="background-color: #f5f5f5">
     <div class="layout">
         <div class="headbar">
-            <h1>Janez Grošelj</h1>
+            <h1>
+                <a href="../index.html">
+                    Janez Grošelj
+                </a>
+            </h1>
         </div>
         <div class="parent">
 
