--- a/architecture/index.html
+++ b/architecture/index.html
@@ -32,9 +32,9 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>&nbspLatest</u>&nbsp</a>
+                <a href="../index.html">&nbspLatest&nbsp</a>
                 <a href="/light">Light&nbsp</a>
-                <a href="/architecture">&nbspArchitecture&nbsp</a>
+                <a href=""><u>&nbspArchitecture&nbsp</u></a>
                 <a href="/design">&nbspDesign&nbsp</a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
