--- a/design/index.html
+++ b/design/index.html
@@ -32,10 +32,10 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>&nbspLatest</u>&nbsp</a>
-                <a href="/light">Light&nbsp</a>
-                <a href="url">&nbspArchitecture&nbsp</a>
-                <a href="url">&nbspDesign&nbsp</a>
+                <a href="../index.html">&nbspLatest&nbsp</a>
+                <a href="/light">&nbspLight&nbsp</a>
+                <a href="architecture">&nbspArchitecture&nbsp</a>
+                <a href=""><u>&nbspDesign&nbsp</u></a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
