--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
             <div class="navigation">
                 <a href=""><u>Latest</u>&nbsp</a>
-                <a href="url">&nbspLight&nbsp</a>
-                <a href="url">&nbspArchitecture&nbsp</a>
-                <a href="url">&nbspDesign&nbsp</a>
+                <a href="/light">&nbspLight&nbsp</a>
+                <a href="/architecture">&nbspArchitecture&nbsp</a>
+                <a href="/design">&nbspDesign&nbsp</a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
