--- a/architecture/index.html
+++ b/architecture/index.html
@@ -42,17 +42,17 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
+                        <p style="naslov-dela">Piranski dnevi arhitekture</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p>Razstava magistrske naloge na Piranskih dneh arhitekture 2019.</p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/vesoljskizarek.jpg">
+                        <img class="portrait" src="images/razstava.jpg">
 
                     </div>
                 </div>
-                <div class="container-dela-desni">
+<!--                <div class="container-dela-desni">
                     <div class="naslov-dela">
                         <p style="naslov-dela">Tree Heartbeat</p>
                     </div>
@@ -64,6 +64,7 @@
                     </div>
                 </div>
             </div>
+-->
 <!--
             <div class="container-del">
                 <div class="container-dela-levi">
