--- a/design/index.html
+++ b/design/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:500,700">
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="../css/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="javascript.js"></script>
     <meta name="description" content="Studio for light, architecture and design Janez Grošelj.">
     <meta name="keywords"
