--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body style="background-color: #f5f5f5">
     <div class="layout">
         <div class="headbar">
-            <a href="../index.html"></a>
+            <a href="../janezgroselj.github.io/index.html"></a>
                 <h1>
                     Janez Grošelj
                 </h1>
