--- a/light/index.html
+++ b/light/index.html
@@ -23,11 +23,11 @@
 <body style="background-color: #f5f5f5">
     <div class="layout">
         <div class="headbar">
-            <h1>
-                <a href="../index.html">
+            <a href="../index.html"></a>
+                <h1>
                     Janez Grošelj
-                </a>
-            </h1>
+                </h1>
+            </a>
         </div>
         <div class="parent">
 
