--- a/design/index.html
+++ b/design/index.html
@@ -34,7 +34,7 @@
             <div class="navigation">
                 <a href="../index.html">&nbspLatest&nbsp</a>
                 <a href="/light">&nbspLight&nbsp</a>
-                <a href="architecture">&nbspArchitecture&nbsp</a>
+                <a href="/architecture">&nbspArchitecture&nbsp</a>
                 <a href=""><u>&nbspDesign&nbsp</u></a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
