--- a/architecture/index.html
+++ b/architecture/index.html
@@ -48,7 +48,7 @@
                         <p>Razstava magistrske naloge na Piranskih dneh arhitekture 2019.</p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/razstava.jpg">
+                        <img class="portrait" src="../images/razstava.jpg">
 
                     </div>
                 </div>
