--- a/contact/index.html
+++ b/contact/index.html
@@ -25,14 +25,11 @@
 
 
             <div class="navigation">
-
-                <a href=""><u>Contact</u>&nbsp</a>
-                <a href="../">&nbspBack</a>
-                <!--                <a href="url">&nbspLight&nbsp</a>
-                <a href="url">&nbspArchitecture&nbsp</a>
-                <a href="url">&nbspDesign&nbsp</a>
- -->
-
+                <a href="../index.html">&nbspLatest&nbsp</a>
+                <a href="/light">Light&nbsp</a>
+                <a href="/architecture"><u>&nbspArchitecture&nbsp</u></a>
+                <a href="/design">&nbspDesign&nbsp</a>
+                <a href="">&nbspContact&nbsp</a>
             </div>
             <div class="container-contact">
                 <p class="contact">studio@janezgroselj.com</p>
