--- a/light/index.html
+++ b/light/index.html
@@ -48,7 +48,7 @@
                         <p>A sculpture-enhancing light intervention</p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/vesoljskizarek.jpg">
+                        <img class="portrait" src="../images/vesoljskizarek.jpg">
 
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                         <p>The connection between human and tree manifested in light.</p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="../images/tree-heartbeat.jpg">
                     </div>
                 </div>
             </div>
