--- a/contact/index.html
+++ b/contact/index.html
@@ -27,9 +27,9 @@
             <div class="navigation">
                 <a href="../index.html">&nbspLatest&nbsp</a>
                 <a href="/light">Light&nbsp</a>
-                <a href="/architecture"><u>&nbspArchitecture&nbsp</u></a>
+                <a href="/architecture">&nbspArchitecture&nbsp></a>
                 <a href="/design">&nbspDesign&nbsp</a>
-                <a href="">&nbspContact&nbsp</a>
+                <a href=""><u>Contact&nbsp</u></a>
             </div>
             <div class="container-contact">
                 <p class="contact">studio@janezgroselj.com</p>
