--- a/design/index.html
+++ b/design/index.html
@@ -35,7 +35,7 @@
                 <a href="../index.html">&nbspLatest&nbsp</a>
                 <a href="/light">&nbspLight&nbsp</a>
                 <a href="/architecture">&nbspArchitecture&nbsp</a>
-                <a href=""><u>&nbspDesign&nbsp</u></a>
+                <a href=""><u>Design&nbsp</u></a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
 
