--- a/contact/index.html
+++ b/contact/index.html
@@ -26,8 +26,8 @@
 
             <div class="navigation">
                 <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href="/light">Light&nbsp</a>
-                <a href="/architecture">&nbspArchitecture&nbsp></a>
+                <a href="/light">&nbspLight&nbsp</a>
+                <a href="/architecture">&nbspArchitecture&nbsp</a>
                 <a href="/design">&nbspDesign&nbsp</a>
                 <a href=""><u>Contact&nbsp</u></a>
             </div>
