--- a/architecture/index.html
+++ b/architecture/index.html
@@ -42,10 +42,10 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Piranski dnevi arhitekture</p>
+                        <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Razstava magistrske naloge na Piranskih dneh arhitekture 2019.</p>
+                        <p>Razstava magistrske naloge: Idejna zasnova programske in arhitekturne prenove kompleksa sv. Bassa v Kopru.</p>
                     </div>
                     <div>
                         <img class="portrait" src="../images/razstava.jpg">
