--- a/architecture/index.html
+++ b/architecture/index.html
@@ -48,7 +48,7 @@
                         <p>Razstava magistrske naloge: Idejna zasnova programske in arhitekturne prenove kompleksa sv. Bassa v Kopru.</p>
                     </div>
                     <div>
-                        <img class="portrait" src="../images/razstava.jpg">
+                        <img class="landscape" src="../images/razstava.jpg">
 
                     </div>
                 </div>
