--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>A sculpture-enhancing light intervention</p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/vesoljskizarek.jpg">
+                        <img class="portrait" src="images/Vesoljskizarek2.gif">
 
                     </div>
                 </div>
