--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
                 <a href="/light">&nbspLight&nbsp</a>
                 <a href="/architecture">&nbspArchitecture&nbsp</a>
                 <a href="/design">&nbspDesign&nbsp</a>
-                <a href=""><u>Contact&nbsp</u></a>
+                <a href=""><u>&nbspContact&nbsp</u></a>
             </div>
             <div class="container-contact">
                 <p class="contact">studio@janezgroselj.com</p>
