--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="parent">
 
             <div class="navigation">
-                <a href=""><u>Latest</u>&nbsp</a>
+                <a href=""><u>&nbspLatest</u>&nbsp</a>
                 <a href="/light">&nbspLight&nbsp</a>
                 <a href="/architecture">&nbspArchitecture&nbsp</a>
                 <a href="/design">&nbspDesign&nbsp</a>
