--- a/light/index.html
+++ b/light/index.html
@@ -33,7 +33,7 @@
 
             <div class="navigation">
                 <a href="../index.html">&nbspLatest&nbsp</a>
-                <a href=""><u>Light&nbsp</u></a>
+                <a href=""><u>&nbspLight&nbsp</u></a>
                 <a href="/architecture">&nbspArchitecture&nbsp</a>
                 <a href="/design">&nbspDesign&nbsp</a>
                 <a href="/contact">&nbspContact&nbsp</a>
