--- a/architecture/index.html
+++ b/architecture/index.html
@@ -34,7 +34,7 @@
             <div class="navigation">
                 <a href="../index.html">&nbspLatest&nbsp</a>
                 <a href="/light">&nbspLight&nbsp</a>
-                <a href=""><u>Architecture&nbsp</u></a>
+                <a href=""><u>&nbspArchitecture&nbsp</u></a>
                 <a href="/design">&nbspDesign&nbsp</a>
                 <a href="/contact">&nbspContact&nbsp</a>
             </div>
