--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
+                        <p style="naslov-dela">Wavescope</p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p>A manifestation of waves in light.</p>
                     </div>
                     <div>
-                        <img class="portrait" src="/images/vesoljskizarek2.gif">
-
+                        <img class="portrait" src="/images/valoskop.gif">
                     </div>
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p>Razstava magistrske naloge: Idejna zasnova programske in arhitekturne prenove kompleksa sv. Bassa v Kopru.</p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="images/razstava.jpg">
                     </div>
                 </div>
             </div>
-            <!--
+
             <div class="container-del">
+
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
                         <p style="naslov-dela">Space invader</p>
@@ -74,8 +74,7 @@
                         <p>A sculpture-enhancing light intervention</p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
-
+                        <img class="portrait" src="/images/vesoljskizarek2.gif">
                     </div>
                 </div>
                 <div class="container-dela-desni">
