--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Razstava magistrske naloge: Idejna zasnova programske in arhitekturne prenove kompleksa sv. Bassa v Kopru.</p>
+                        <p>Razstava magistrske naloge: Prenova kompleksa sv. Bassa v Kopru.</p>
                     </div>
                     <div>
                         <img class="landscape" src="images/razstava.jpg">
