--- a/light/index.html
+++ b/light/index.html
@@ -42,6 +42,17 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
+                        <p style="naslov-dela">Wavescope</p>
+                    </div>
+                    <div class="opis-dela">
+                        <p>A manifestation of waves in light.</p>
+                    </div>
+                    <div>
+                        <img class="portrait" src="../images/valoskop.gif">
+                    </div>
+                </div>
+                <div class="container-dela-desni">
+                    <div class="naslov-dela">
                         <p style="naslov-dela">Space invader</p>
                     </div>
                     <div class="opis-dela">
@@ -49,10 +60,12 @@
                     </div>
                     <div>
                         <img class="portrait" src="../images/vesoljskizarek2.gif">
-
                     </div>
                 </div>
-                <div class="container-dela-desni">
+            </div>
+
+            <div class="container-del">
+                <div class="container-dela-levi">
                     <div class="naslov-dela">
                         <p style="naslov-dela">Tree Heartbeat</p>
                     </div>
@@ -63,22 +76,7 @@
                         <img class="landscape" src="../images/tree-heartbeat.jpg">
                     </div>
                 </div>
-            </div>
-<!--
-            <div class="container-del">
-                <div class="container-dela-levi">
-                    <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
-                    </div>
-                    <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
-                    </div>
-                    <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
-
-                    </div>
-                </div>
-                <div class="container-dela-desni">
+<!--                <div class="container-dela-desni">
                     <div class="naslov-dela">
                         <p style="naslov-dela">Tree Heartbeat</p>
                     </div>
