--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Piranski dnevi arhitekture 2019</p>
+                        <p style="naslov-dela">Piran days of architecture 2019</p>
                     </div>
                     <div class="opis-dela">
-                        <p>Razstava magistrske naloge: Prenova kompleksa sv. Bassa v Kopru.</p>
+                        <p>Exhibition of masters degree at PIDA.</p>
                     </div>
                     <div>
                         <img class="landscape" src="images/razstava.jpg">
