--- a/light/index.html
+++ b/light/index.html
@@ -48,7 +48,7 @@
                         <p>A manifestation of waves in light.</p>
                     </div>
                     <div>
-                        <img class="portrait" src="../images/valoskop.gif">
+                        <img class="landscape" src="../images/valoskop.gif">
                     </div>
                 </div>
                 <div class="container-dela-desni">
