--- a/design/index.html
+++ b/design/index.html
@@ -42,25 +42,25 @@
             <div class="container-del-prvi">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p></p>
                     </div>
                     <div>
-                        <img class="portrait" src="images/vesoljskizarek.jpg">
+                        <img class="portrait" src="../images/kolor.png">
 
                     </div>
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="../images/kolovoz.png">
                     </div>
                 </div>
             </div>
