--- a/design/index.html
+++ b/design/index.html
@@ -64,17 +64,17 @@
                     </div>
                 </div>
             </div>
-<!--
+
             <div class="container-del">
                 <div class="container-dela-levi">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Space invader</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>A sculpture-enhancing light intervention</p>
+                        <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="../images/zip1.png">
 
                     </div>
                 </div>
@@ -86,11 +86,62 @@
                         <p>The connection between human and tree manifested in light.</p>
                     </div>
                     <div>
-                        <img class="landscape" src="images/tree-heartbeat.jpg">
+                        <img class="landscape" src="../images/zip2.png">
                     </div>
                 </div>
             </div>
--->
+
+            <div class="container-del">
+                <div class="container-dela-levi">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela"></p>
+                    </div>
+                    <div class="opis-dela">
+                        <p></p>
+                    </div>
+                    <div>
+                        <img class="landscape" src="../images/outcider.png">
+
+                    </div>
+                </div>
+                <div class="container-dela-desni">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela">Tree Heartbeat</p>
+                    </div>
+                    <div class="opis-dela">
+                        <p>The connection between human and tree manifested in light.</p>
+                    </div>
+                    <div>
+                        <img class="landscape" src="../images/wholeugrain.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-del">
+                <div class="container-dela-levi">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela"></p>
+                    </div>
+                    <div class="opis-dela">
+                        <p></p>
+                    </div>
+                    <div>
+                        <img class="landscape" src="../images/utripnarave.png">
+
+                    </div>
+                </div>
+                <div class="container-dela-desni">
+                    <div class="naslov-dela">
+                        <p style="naslov-dela">Tree Heartbeat</p>
+                    </div>
+                    <div class="opis-dela">
+                        <p>The connection between human and tree manifested in light.</p>
+                    </div>
+                    <div>
+                        <img class="landscape" src="../images/odlociseza.png">
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
