--- a/design/index.html
+++ b/design/index.html
@@ -80,10 +80,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p></p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/zip2.png">
@@ -106,10 +106,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p></p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/wholeugrain.png">
@@ -132,10 +132,10 @@
                 </div>
                 <div class="container-dela-desni">
                     <div class="naslov-dela">
-                        <p style="naslov-dela">Tree Heartbeat</p>
+                        <p style="naslov-dela"></p>
                     </div>
                     <div class="opis-dela">
-                        <p>The connection between human and tree manifested in light.</p>
+                        <p></p>
                     </div>
                     <div>
                         <img class="landscape" src="../images/odlociseza.png">
