--- a/design/index.html
+++ b/design/index.html
@@ -48,7 +48,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="portrait" src="../images/kolor.png">
+                        <img class="portrait" src="../images/Artboard 1.png">
 
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/kolovoz.png">
+                        <img class="landscape" src="../images/Artboard 2.png">
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/zip1.png">
+                        <img class="landscape" src="../images/Artboard 3.png">
 
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/zip2.png">
+                        <img class="landscape" src="../images/Artboard 4.png">
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/outcider.png">
+                        <img class="landscape" src="../images/Artboard 5.png">
 
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/wholeugrain.png">
+                        <img class="landscape" src="../images/Artboard 6.png">
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/utripnarave.png">
+                        <img class="landscape" src="../images/Artboard 7.png">
 
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <img class="landscape" src="../images/odlociseza.png">
+                        <img class="landscape" src="../images/Artboard 8.png">
                     </div>
                 </div>
             </div>
